Extract output, stop at first rejected snippet, split snippets using SourceCodeAnalysis